implement Neural Sieve knowledge management system
  Complete V1 implementation including:
  - Python CLI with uv (sieve init/watch/manage/mcp/process/index)
  - File watcher for Inbox/ and screenshot folders
  - GPT-5-mini integration for text/image processing
  - Knowledge Capsule format with YAML frontmatter
  - HTMX dashboard for capsule management
  - MCP server with search/get_pinned/get_capsule tools
  - Chrome extension for web capture

  Changes made:
  - Created: src/sieve/ (22 Python files)
  - Created: extension/ (6 files)
  - Created: pyproject.toml, .env.example
  - Modified: README.md (setup instructions)

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,87 @@
 
 # OS files
 .DS_Store
+Thumbs.db
+Desktop.ini
 
 # Temporary files
 Inbox/*
 !Inbox/.gitkeep
+
+# ========================
+# SENSITIVE FILES - CRITICAL
+# ========================
+
+# Environment files (may contain API keys, secrets)
+.env
+.env.*
+.env.local
+.env.development
+.env.production
+*.env
+
+# API keys and secrets
+*.key
+*.pem
+*.p12
+*.pfx
+*.crt
+*.cer
+secrets.json
+secrets.yaml
+secrets.yml
+**/secrets/
+apikey*
+api_key*
+*apikey*
+*api_key*
+
+# Credentials
+credentials.json
+credentials.yaml
+credentials.yml
+**/credentials/
+*.credentials
+service-account*.json
+auth.json
+
+# Config files that may contain secrets
+config.local.json
+config.local.yaml
+config.production.json
+settings.local.*
+*.secret.*
+
+# Token files
+*.token
+*_token
+token.txt
+tokens.json
+
+# ========================
+# Development
+# ========================
+
+# Dependencies
+node_modules/
+vendor/
+__pycache__/
+*.pyc
+venv/
+.venv/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# Build outputs
+dist/
+build/
+*.log
+
+# Test coverage
+coverage/
+.coverage
