feat: add comprehensive test suite with pytest
  Implements complete testing infrastructure for Neural Sieve with 129 tests
  covering configuration, utilities, capsule handling, content extractors,
  processing pipeline, and LLM integration with mocked API calls.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,13 @@ dependencies = [
     "python-multipart>=0.0.9",
 ]
 
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.0",
+    "pytest-asyncio>=0.23",
+    "pytest-cov>=4.1",
+]
+
 [project.scripts]
 sieve = "sieve.cli:cli"
 
@@ -38,3 +45,18 @@ target-version = "py311"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "UP"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
+
+[tool.coverage.run]
+source = ["src/sieve"]
+omit = ["*/dashboard/*", "*/mcp/*", "*/cli.py"]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "if TYPE_CHECKING:",
+]
