refactor: move knowledge index from README.md to Capsules/INDEX.md
  - Rename readme_path to index_path in Settings
  - Update Indexer to write to Capsules/INDEX.md with relative paths
  - Rename MCP tool from get_readme to get_index
  - Restore project README as documentation

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 .sieve/cache/
 .sieve/local_index.json
 
+# Knowledge vault data (local only)
+Capsules/
+Assets/
+Legacy/
+README.md
+
 # OS files
 .DS_Store
 Thumbs.db
